--- a/src/app/dialog-modals/terms-dialog/terms-dialog.component.html
+++ b/src/app/dialog-modals/terms-dialog/terms-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="title">{{title}}</div>
 
   <div class="content">
-    <div class="text">{{text}}</div>
+    <div class="text" [innerHtml]="text | htmlSanitizer"></div>
 
     <div class="end">{{'TERMS_END' | translate}}</div>
   </div>
