--- a/src/app/payment/payment-info/payment-info.component.html
+++ b/src/app/payment/payment-info/payment-info.component.html
@@ -1,17 +1,17 @@
 <div class="payment">
 
   <img class="logo" src="/assets/images/logo-white.svg" alt="">
-  <button mat-button class="logout" (click)="logout()">SIGN OUT</button>
+  <button mat-button class="logout" (click)="logout()">{{'PAYMENT_ALERT_SIGNOUT' | translate}}</button>
 
   <div class="text">
     <ng-container *ngIf="isOwner; else infotext">
-      <div>Please pay!</div>
+      <div>{{'PAYMENT_ALERT_OWNER' | translate}}</div>
 
-      <button class="proceed" [routerLink]="['/payment']" mat-button>PROCEED TO PAYMENT</button>
+      <button class="proceed" [routerLink]="['/payment']" mat-button>{{'PAYMENT_ALERT_PROCEED' | translate}}</button>
     </ng-container>
 
     <ng-template #infotext>
-      <div>Account payment issues, please contact account owner.</div>
+      <div>{{'PAYMENT_ALERT_USER' | translate}}</div>
     </ng-template>
   </div>
 
