--- a/src/app/payment/plans/plans.component.html
+++ b/src/app/payment/plans/plans.component.html
@@ -1,67 +1,67 @@
 <div class="container">
 
   <div class="plan">
-    <div class="name">Basic</div>
+    <div class="name">{{'PAYMENT_PLANS_BASIC' | translate}}</div>
 
     <div class="item">
       <div class="value">$0.06</div>
-      <div class="key">per transaction</div>
+      <div class="key">{{'PAYMENT_PLANS_PERTRANSACTION' | translate}}</div>
     </div>
 
     <div class="item">
       <div class="value">$30</div>
-      <div class="key">minimum per month</div>
+      <div class="key">{{'PAYMENT_PLANS_MINIMUM' | translate}}</div>
     </div>
 
     <div class="item">
       <div class="value">1</div>
-      <div class="key">campaign</div>
+      <div class="key">{{'PAYMENT_PLANS_CAMPAIGN' | translate}}</div>
     </div>
 
-    <button mat-button (click)="selectBasic()">CHOOSE</button>
+    <button mat-button (click)="selectBasic()">{{'PAYMENT_PLANS_CHOOSE' | translate}}</button>
   </div>
 
   <div class="plan">
-    <div class="name">Professional</div>
+    <div class="name">{{'PAYMENT_PLANS_PROFESSIONAL' | translate}}</div>
 
     <div class="item">
       <div class="value">$0.06</div>
-      <div class="key">per transaction</div>
+      <div class="key">{{'PAYMENT_PLANS_PERTRANSACTION' | translate}}</div>
     </div>
 
     <div class="item">
       <div class="value">$150</div>
-      <div class="key">minimum per month</div>
+      <div class="key">{{'PAYMENT_PLANS_MINIMUM' | translate}}</div>
     </div>
 
     <div class="item">
-      <div class="value">Unlimited</div>
-      <div class="key">campaign</div>
+      <div class="value">{{'PAYMENT_PLANS_UNLIMITED' | translate}}</div>
+      <div class="key">{{'PAYMENT_PLANS_CAMPAIGN' | translate}}</div>
     </div>
 
-    <button mat-button (click)="selectProfessional()">CHOOSE</button>
+    <button mat-button (click)="selectProfessional()">{{'PAYMENT_PLANS_CHOOSE' | translate}}</button>
   </div>
 
 
   <div class="plan">
-    <div class="name">Premium</div>
+    <div class="name">{{'PAYMENT_PLANS_PREMIUM' | translate}}</div>
 
     <div class="item">
       <div class="value">$2000</div>
-      <div class="key">per month</div>
+      <div class="key">{{'PAYMENT_PLANS_PERMONTH' | translate}}</div>
     </div>
 
     <div class="item">
       <div class="value">No</div>
-      <div class="key">transaction fees</div>
+      <div class="key">{{'PAYMENT_PLANS_TRANSACTIONFEE' | translate}}</div>
     </div>
 
     <div class="item">
-      <div class="value">Unlimited</div>
-      <div class="key">campaign</div>
+      <div class="value">{{'PAYMENT_PLANS_UNLIMITED' | translate}}</div>
+      <div class="key">{{'PAYMENT_PLANS_CAMPAIGN' | translate}}</div>
     </div>
 
-    <button mat-button (click)="selectPremium()">CHOOSE</button>
+    <button mat-button (click)="selectPremium()">{{'PAYMENT_PLANS_CHOOSE' | translate}}</button>
   </div>
 
 </div>
