--- a/src/app/payment/plan-payment/plan-payment.component.html
+++ b/src/app/payment/plan-payment/plan-payment.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="column left">
 
-    <div class="title" [class.error]="transactionalError">{{transactionalError ? 'Payment Declined' : 'Payment'}}</div>
-    <div *ngIf="transactionalError" class="error-message error">Please check your card information and try again or use a different card</div>
+    <div class="title" [class.error]="transactionalError">{{(transactionalError ? 'PAYMENT_TITLE' : 'PAYMENT_ERRORTITLE') | translate}}</div>
+    <div *ngIf="transactionalError" class="error-message error">{{'PAYMENT_ERRORMESSAGE' | translate}}</div>
 
     <div class="cards" [class.cards-error]="transactionalError">
       <img *ngIf="creditCard.typeUnknown() || creditCard.getType() === 'visa'" src="/assets/cards/visa.svg">
@@ -20,17 +20,17 @@
 
     <div class="form">
       <mat-form-field [class.error]="formInvalid && ccNumberInvalid()">
-        <input type="text" matInput placeholder="Card Number" [(ngModel)]="creditCard.ccnumber" (keydown)="isAllowedNumericKey($event)">
+        <input type="text" matInput placeholder="{{'PAYMENT_FORM_NUMBER' | translate}}" [(ngModel)]="creditCard.ccnumber" (keydown)="isAllowedNumericKey($event)">
       </mat-form-field>
 
 
       <mat-form-field class="code" [class.error]="formInvalid && ccvInvalid()">
-        <input type="text" matInput placeholder="Security Code" [(ngModel)]="creditCard.ccv" (keydown)="isAllowedNumericKey($event)">
+        <input type="text" matInput placeholder="{{'PAYMENT_FORM_CODE' | translate}}" [(ngModel)]="creditCard.ccv" (keydown)="isAllowedNumericKey($event)">
       </mat-form-field>
 
 
       <mat-form-field [class.error]="formInvalid && (!creditCard.name || creditCard.name.length < 2)">
-        <input type="text" matInput placeholder="Name on Card" [(ngModel)]="creditCard.name">
+        <input type="text" matInput placeholder="{{'PAYMENT_FORM_NAME' | translate}}" [(ngModel)]="creditCard.name">
       </mat-form-field>
 
       <div class="dates">
@@ -38,7 +38,7 @@
              [matMenuTriggerFor]="monthMenu"
              [class.error]="formInvalid && !creditCard.expirationMonth"
              [class.selected]="creditCard.expirationMonth">
-          <div>{{creditCard.expirationMonth || 'Month'}}</div>
+          <div>{{(creditCard.expirationMonth || 'PAYMENT_FORM_MONTH') | translate}}</div>
           <mat-icon>keyboard_arrow_down</mat-icon>
           <mat-menu #monthMenu="matMenu">
             <button mat-menu-item *ngFor="let month of months" (click)="setMonth(month)">{{month}}</button>
@@ -49,7 +49,7 @@
              [matMenuTriggerFor]="yearMenu"
              [class.error]="formInvalid && !creditCard.expirationYear"
              [class.selected]="creditCard.expirationYear">
-          <div>{{creditCard.expirationYear || 'Year'}}</div>
+          <div>{{(creditCard.expirationYear || 'PAYMENT_FORM_YEAR') | translate}}</div>
           <mat-icon>keyboard_arrow_down</mat-icon>
           <mat-menu #yearMenu="matMenu">
             <button mat-menu-item *ngFor="let year of years" (click)="setYear(year)">{{year}}</button>
@@ -62,20 +62,20 @@
 
   <div class="column right">
 
-    <div class="title">You have chosen SIX {{plan.name}} Tier</div>
-    <div class="subtitle" (click)="changePlan.emit(true)">Change Plan</div>
+    <div class="title">{{'PAYMENT_INFO_TITLE' | translate}} {{plan.name}} {{'PAYMENT_INFO_TIER' | translate}}</div>
+    <div class="subtitle" (click)="changePlan.emit(true)">{{'PAYMENT_INFO_CHANGE' | translate}}</div>
 
     <div class="details">
-      <div>Total billed today:</div>
+      <div>{{'PAYMENT_INFO_TOTAL' | translate}}:</div>
       <div class="line"></div>
       <div>${{plan.price}}</div>
     </div>
 
-    <div class="terms" (click)="openOwnerTerms()">{{'REGISTER_OWNERTERMS' | translate}}</div>
-    <button mat-button (click)="pay()">Finish and Pay</button>
+    <div class="terms" (click)="openOwnerTerms()">{{'PAYMENT_OWNERTERMS' | translate}}</div>
+    <button mat-button (click)="pay()">{{'PAYMENT_INFO_FINISH' | translate}}</button>
   </div>
 </div>
 
 <div class="process-overlay" *ngIf="paymentInProgress">
-  <div>Processing Payment ...</div>
+  <div>{{'PAYMENT_PROCESSING' | translate}}</div>
 </div>
