--- a/src/app/pages/customer-service-page/customer-service-order/customer-service-transactions/customer-service-transactions.component.html
+++ b/src/app/pages/customer-service-page/customer-service-order/customer-service-transactions/customer-service-transactions.component.html
@@ -18,8 +18,8 @@
           <td class="amount">{{transaction.amount.usd()}}</td>
           <td><mat-icon [matMenuTriggerFor]="downloadOptions">more_vert</mat-icon>
             <mat-menu #downloadOptions="matMenu" x-position="before">
-              <button mat-menu-item>REFUND</button>
-              <button mat-menu-item>RETURN</button>
+              <button mat-menu-item>Refund</button>
+              <button mat-menu-item>Return</button>
             </mat-menu>
           </td>
         </tr>
