Use new API for activities.

--- a/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-events/customer-events.component.html
@@ -27,7 +27,7 @@
                 <div class="events__content__info">
                   <div>{{activity.date | formatDateTime: 'date-time'}}</div>
                   <div>
-                    <single-event [data]="activity.parse()"></single-event>
+                    <single-event [data]="activity.parsed_statement"></single-event>
                   </div>
                 </div>
               </div>
