--- a/src/app/payment/payment-info/payment-info.component.html
+++ b/src/app/payment/payment-info/payment-info.component.html
@@ -3,6 +3,14 @@
   <img class="logo" src="/assets/images/logo-white.svg" alt="">
   <button mat-button class="logout" (click)="logout()">{{'PAYMENT_ALERT_SIGNOUT' | translate}}</button>
 
+  <simple-dropdown
+    [mapper]="mapAcl"
+    [selectedOption]="authService.activeAcl$ | async"
+    [options]="authService.getAcls()"
+    [icon]="'domain'"
+    (optionSelected)="changeAcl($event)">
+  </simple-dropdown>
+
   <div class="text">
     <ng-container *ngIf="isOwner; else infotext">
       <div>{{'PAYMENT_ALERT_OWNER' | translate}}</div>
