--- a/src/app/payment/payment-info/payment-info.component.scss
+++ b/src/app/payment/payment-info/payment-info.component.scss
@@ -23,8 +23,9 @@
 .logout {
   color: white;
   position: absolute;
-  top: 20px;
-  right: 20px;
+  bottom: 15px;
+  left: 15px;
+  font-size: 18px;
 }
 
 .logo {
@@ -32,4 +33,12 @@
   position: absolute;
   top: 15px;
   left: 15px;
+}
+
+simple-dropdown {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-family: "Roboto", serif;
+  font-size: 16px;
 }
