--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.scss
@@ -1,167 +1,60 @@
-.terms-and-conditions {
+.container {
+  display: flex;
+  border-radius: 4px;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.3), 0 15px 12px rgba(0,0,0,0.22);
+  flex-direction: column;
+  width: 640px;
+  height: 720px;
+  background: white;
+  font-family: "Roboto", serif;
 
-  &__container {
-    position: absolute;
-    min-width: 100vw;
-    min-height: 100vh;
-    background: linear-gradient(to bottom right, #067AE9, #0938C6);
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
+  .title {
+    background: #FFFCAB;
+    padding: 45px 25px;
+    font-size: 20px;
+    font-weight: 500;
+    color: rgba(0, 0, 0, 0.87);
+    border-radius: 4px 4px 0 0;
   }
 
-  &__acl-dropdown {
-    position: absolute;
-    top: 15px;
-    right: 20px;
-    width: 200px;
+  .body {
+    text-align: justify;
+    overflow: auto;
+    height: 480px;
+    padding: 25px 45px;
     font-size: 13px;
-    background: #0C5FD2;
+    line-height: 16px;
+    color: rgba(0, 0, 0, 0.54);
   }
 
-  &__header {
-    position: relative;
-    margin: 100px auto 20px;
-    max-width: 720px;
-    height: 130px;
-    width: 100%;
+  .actions {
+    display: flex;
+    margin: auto 25px;
+    align-items: center;
+    color: #2C98F0;
 
-    @media only screen and (max-width: 600px) {
-      height: 96px;
-    }
-
-    &__logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%);
-      height: 100px;
-    }
-
-    &__cloud {
-      position: absolute;
-
-      @media only screen and (max-width: 450px) {
-        display: none;
-      }
-
-      &--one {
-        left: 0;
-
-        @media only screen and (max-width: 600px) {
-          width: 130px;
-        }
-      }
-
-      &--two {
-        left: 25px;
-        top: 20px;
-
-        @media only screen and (max-width: 600px) {
-          width: 150px;
-        }
-      }
-
-      &--three {
-        right: 0;
-        top: 16px;
-
-        @media only screen and (max-width: 600px) {
-          width: 130px;
-        }
-      }
-
-      &--four {
-        right: 20px;
-        top: 30px;
-
-        @media only screen and (max-width: 600px) {
-          width: 150px;
-        }
-      }
-    }
-
-  }
-
-  &__body {
-    margin: 0 auto 20px;
-    width: 100%;
-    max-width: 720px;
-    color: white;
-  }
-
-  &__title {
-    margin: 40px 0;
-    font-size: 25px;
-    font-weight: 500;
-
-    @media only screen and (max-width: 600px) {
-      font-size: 20px;
-    }
-  }
-
-  &__content {
-    background: white;
-    color: black;
-    font-size: 14px;
-    text-align: left;
-
-    &__title {
-      height: 20px;
-      padding: 10px;
-      font-size: 18px;
-      font-weight: 500;
-
-      @media only screen and (max-width: 600px) {
-        font-size: 14px;
-      }
-    }
-
-    &__body {
-      padding: 0 10px 10px;
-      overflow: auto;
-      height: 240px;
+    button {
+      text-transform: uppercase;
       font-size: 14px;
-      font-weight: 300;
+    }
 
-      @media only screen and (max-width: 600px) {
-        font-size: 12px;
-      }
+    .accept {
+      color: white;
+      background: #2C98F0;
+    }
+
+    .logout {
+      margin-left: auto;
+      margin-right: 30px;
+    }
+
+    .disabled {
+      background: rgba(0, 0, 0, 0.26);
     }
   }
 
-  &__button {
-    outline: none;
-    color: white;
-    border-width: 1px;
-    display: inline-block;
-    margin: 25px 0 5px;
-    width: 120px;
-    padding: 8px;
-    background: #F57C00;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-
-    &--disabled {
-      background: rgba(0,0,0,0.6);
-    }
-
-    @media only screen and (max-width: 600px) {
-      font-size: 16px;
-    }
-
-    &--cancel {
-      display: inline-block;
-      margin: 0 0 25px;
-      font-size: 14px;
-      font-weight: 500;
-      cursor: pointer;
-      color: #E6AB4C;
-    }
+  simple-dropdown {
+    font-size: 13px;
   }
-}
-
-.progress-bar {
-  position: absolute;
 }
 
