--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -55,3 +55,70 @@
     margin: auto;
   }
 }
+
+.welcome-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to bottom left, #4277C2, #2C98F0);
+  animation: fadeaway 1s;
+  animation-delay: 1s;
+}
+
+@keyframes fadeaway {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.terms-and-conditions-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(to bottom left, rgba(66, 119, 194, 0.75), rgba(44, 152, 240, 0.75));
+}
+
+terms-and-conditions {
+  margin: auto;
+}
+
+#box {
+  animation: fontbulger 2s infinite;
+}
+
+.welcome {
+  margin: auto;
+  text-align: center;
+
+  mat-icon {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+    background: #1EBEA5;
+    font-size: 120px;
+    color: white;
+  }
+
+  .text {
+    margin-top: 20px;
+    line-height: 84px;
+    font-family: "Roboto", serif;
+    font-weight: 300;
+    font-size: 74px;
+    color: white;
+  }
+}
