--- a/src/assets/scss/_dialogs.scss
+++ b/src/assets/scss/_dialogs.scss
@@ -76,3 +76,10 @@ mat-dialog-container {
     }
   }
 }
+
+.terms-switcher {
+
+  .simple-dropdown__header {
+    color: #2C98F0 !important;
+  }
+}
