--- a/src/app/payment/payment/payment.component.html
+++ b/src/app/payment/payment/payment.component.html
@@ -21,14 +21,9 @@
   <div *ngIf="paymentInProgress" class="container">
     <plan-payment
       (changePlan)="changePlanEmitted()"
-      (paymentSuccessful)="accountRegistrationFinished()"
+      (paymentSuccessful)="accountPaymentFinished()"
       [plan]="plan">
     </plan-payment>
-  </div>
-
-  <div class="welcome" *ngIf="showWelcome">
-    <mat-icon>done</mat-icon>
-    <div class="text">{{'REGISTER_WELCOME' | translate}}</div>
   </div>
 
 </div>
