Connect top-campaigns dashboard report to new analytics API.

--- a/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
+++ b/src/app/pages/dashboard-page/top-campaigns/top-campaigns.component.html
@@ -21,7 +21,7 @@
         <div class="num" [style.background-color]="colors[i]">
           <div>{{i + 1}}</div>
         </div>
-        <div class="name">{{campaign.campaign}}</div>
+        <div class="name">{{campaign.campaign_name || campaign.campaign}}</div>
         <div class="amount">{{campaign.amount.usd()}}</div>
       </div>
     </div>
