Dont show account switcher when accepting user terms and conditions

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -6,6 +6,7 @@
   <div class="actions">
 
     <simple-dropdown
+      *ngIf="showingOwnerTermsAndConditions"
       class="terms-switcher"
       [selectedOption]="authService.activeAcl$ | async"
       [disabled]="requestInProgress"
