--- a/src/app/payment/plans/plans.component.scss
+++ b/src/app/payment/plans/plans.component.scss
@@ -5,12 +5,28 @@
 
   .plan {
     padding: 20px 0 24px;
-    background: white;
+    background: #FAFAFA;
     width: 360px;
     margin: 0 16px;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     text-align: center;
+
+    &--selected {
+      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.22), 0 4px 4px rgba(0,0,0,0.22);
+      transition: all 250ms;
+    }
+
+    &--nonselected {
+      background: rgba(255,255,255,0.7);
+      transition: all 250ms;
+
+      button {
+        color: rgba(0, 0, 0, 0.26) !important;
+        background: rgba(0, 0, 0, 0.12) !important;
+        transition: all 250ms;
+      }
+    }
 
     .name {
       color: #4277C2;
@@ -41,6 +57,7 @@
       border-radius: 2px;
       font-size: 14px;
       padding: 6px 50px;
+      text-transform: uppercase;
     }
   }
 }
